# nankangSip

./: .gitignore  README.md
api/: openapi.yaml
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/api/: ApiServer.hpp  HttpServer.cpp  HttpServer.hpp
backend/src/core/: CallManager.cpp  CallManager.hpp
backend/src/sip/: SipStack.hpp  SipStackDummy.hpp
backend/src/webrtc/: WebRtcBridge.hpp
web/: index.html  package.json
web/src/: App.jsx
